update swagger spec && add dummy handlers for endpoints
